logs/Slang/generated/hdlconv/hdlconvertor_p580.sv.log
name: hdlconvertor_p580
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:1:1: error: language feature not yet supported
covergroup g1 (int w, string instComment) @(posedge clk) ;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:5: error: expected 'coverpoint'
c1 : cross a_var, b_var ;
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:5: error: expected ';'
c1 : cross a_var, b_var ;
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:6: error: expected expression
c1 : cross a_var, b_var ;
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:6: error: expected member
c1 : cross a_var, b_var ;
     ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:17: error: expected expression
c1 : cross a_var, b_var ;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:17: error: expected ':'
c1 : cross a_var, b_var ;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:17: error: expected ';'
c1 : cross a_var, b_var ;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:17: error: expected member
c1 : cross a_var, b_var ;
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:24: error: expected ':'
c1 : cross a_var, b_var ;
                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p580.sv:18:25: error: expected expression
c1 : cross a_var, b_var ;
                        ^
